--- a/02.1_code_a_perceptron.ipynb
+++ b/02.1_code_a_perceptron.ipynb
@@ -43,8 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -67,9 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=(8, 3) dtype=float32, numpy=\n",
+      "array([[1., 1., 1.],\n",
+      "       [0., 1., 1.],\n",
+      "       [1., 0., 1.],\n",
+      "       [0., 0., 1.],\n",
+      "       [1., 1., 0.],\n",
+      "       [0., 1., 0.],\n",
+      "       [1., 0., 0.],\n",
+      "       [0., 0., 0.]], dtype=float32)>\n"
+     ]
+    }
+   ],
    "source": [
     "X = tf.Variable([[1.,1.,1.], # Case 1\n",
     "                 [0.,1.,1.], # Case 2\n",
@@ -103,11 +123,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]], shape=(8, 1), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code it!\n"
+    "# Code it!\n",
+    "y = tf.Variable ([1,1,1,1,1,0,0,0], dtype = tf.float32)\n",
+    "y = tf.reshape (y, [8,1])\n",
+    "print (y)"
    ]
   },
   {
@@ -133,11 +174,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code it!\n"
+    "# Code it!\n",
+    "num_features = X.shape[1]\n",
+    "output_size = 1\n",
+    "print (num_features)\n",
+    "print (output_size)"
    ]
   },
   {
@@ -160,11 +216,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=(3, 1) dtype=float32, numpy=\n",
+      "array([[0.],\n",
+      "       [0.],\n",
+      "       [0.]], dtype=float32)>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code it!\n"
+    "# Code it!\n",
+    "W = tf.Variable(tf.zeros([num_features, output_size]), dtype = tf.float32)\n",
+    "\n",
+    "print(W)"
    ]
   },
   {
@@ -187,11 +259,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=(1, 1) dtype=float32, numpy=array([[0.]], dtype=float32)>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code it!\n"
+    "# Code it!\n",
+    "B = tf.Variable(tf.zeros([output_size, 1]), dtype = tf.float32)\n",
+    "\n",
+    "print (B)"
    ]
   },
   {
@@ -225,8 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 44,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def perceptron(X):\n",
@@ -244,9 +331,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]], shape=(8, 1), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "# Execute the perceptron to see its initial predictions before training.\n",
     "print(perceptron(X))       "
@@ -265,8 +370,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "learning_rate = 0.01\n",
@@ -296,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -331,16 +438,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 48,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=(3, 1) dtype=float32, numpy=\n",
+      "array([[0.2906849],\n",
+      "       [0.2906849],\n",
+      "       [1.0723362]], dtype=float32)>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code it!\n"
+    "# Code it!\n",
+    "print (W) "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## 11. Print the bias\n",
     "\n",
@@ -351,11 +474,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 49,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=(1, 1) dtype=float32, numpy=array([[-0.33376607]], dtype=float32)>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code it!\n"
+    "# Code it!\n",
+    "print (B)"
    ]
   },
   {
@@ -373,11 +507,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 52,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Code it!\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(perceptron(\u001b[43mx\u001b[49m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Code it!"
+    "# Code it!\n",
+    "print(perceptron(x))"
    ]
   },
   {
@@ -391,9 +540,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Photos of 3 meals submitted?</th>\n",
+       "      <th>Satisfied with food choices?</th>\n",
+       "      <th>Generally happy?</th>\n",
+       "      <th>Following the DARN Plan?</th>\n",
+       "      <th>Predictions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.866769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.773609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.773609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.628280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.242665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.043055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.043055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.321901</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Photos of 3 meals submitted?  Satisfied with food choices?  \\\n",
+       "0                           1.0                           1.0   \n",
+       "1                           0.0                           1.0   \n",
+       "2                           1.0                           0.0   \n",
+       "3                           0.0                           0.0   \n",
+       "4                           1.0                           1.0   \n",
+       "5                           0.0                           1.0   \n",
+       "6                           1.0                           0.0   \n",
+       "7                           0.0                           0.0   \n",
+       "\n",
+       "   Generally happy?  Following the DARN Plan?  Predictions  \n",
+       "0               1.0                       1.0     0.866769  \n",
+       "1               1.0                       1.0     0.773609  \n",
+       "2               1.0                       1.0     0.773609  \n",
+       "3               1.0                       1.0     0.628280  \n",
+       "4               0.0                       1.0     0.242665  \n",
+       "5               0.0                       0.0    -0.043055  \n",
+       "6               0.0                       0.0    -0.043055  \n",
+       "7               0.0                       0.0    -0.321901  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_df = pd.DataFrame(X.numpy(), columns=['Photos of 3 meals submitted?', 'Satisfied with food choices?', 'Generally happy?'])\n",
     "y_df = pd.DataFrame(y.numpy(), columns=['Following the DARN Plan?'])\n",
@@ -430,7 +705,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "## From step 3\n",
